--- a/speakers.html
+++ b/speakers.html
@@ -997,6 +997,32 @@
           </div>
 
           <!-- Speaker 2 -->
+            <!-- Speaker - Joe Kainja -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Joe Kainja.jpeg" alt="Joe Kainja" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Joe Kainja</h3>
+                  <h4>CEO – Jophi Group | MD – Legacy Africa Multi Strategies</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalJoeKainja"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="ceo">
               <div class="speaker-image">
@@ -1027,6 +1053,32 @@
           </div>
 
           <!-- Speaker 3 -->
+            <!-- Speaker - Hortense Mudenge -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/HORTENSE MUDENGE.jpeg" alt="Hortense Mudenge" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Hortense Mudenge</h3>
+                  <h4>Chief Executive Officer, Kigali International Financial Centre</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalHortenseMudenge"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="media">
               <div class="speaker-image">
@@ -1732,6 +1784,123 @@
       </div>
     </div>
     <!-- Speaker Modal 3 -->
+      <!-- Speaker Modal - Hortense Mudenge -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalHortenseMudenge"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/HORTENSE MUDENGE.jpeg" alt="Hortense Mudenge" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Hortense Mudenge</h3>
+                    <h4>Chief Executive Officer, Kigali International Financial Centre</h4>
+                    <div class="speaker-modal-bio">
+                      <p>Hortense MUDENGE is the Chief Executive Officer of the Kigali International Financial Centre, a financial centre facilitating international investment and cross-border transactions in Africa.</p>
+                      <p>KIFC’s mandate is to position Rwanda as a preferred financial jurisdiction for investments in Africa by offering an attractive, competitive, and investor-friendly environment, fully compliant with international best practices.</p>
+                      <p>Hortense is a seasoned management consultant, with over 10 years of experience in advising international development and private-sector clients on business and market development.</p>
+                      <p>Prior to joining KIFC, Hortense worked with Dexis Consulting Group and the Global Alliance for Improved Nutrition, as a consultant, providing technical expertise in the delivery of donor-funded investment programs and grant facilities.</p>
+                      <p>Hortense holds an MBA from Hult International Business School in the US and is a graduate of the United States International University- Africa.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Speaker Modal - Joe Kainja -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalJoeKainja"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/Joe Kainja.jpeg" alt="Joe Kainja" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Joe Kainja</h3>
+                    <h4>CEO – Jophi Group | MD – Legacy Africa Multi Strategies</h4>
+                    <div class="speaker-modal-bio">
+                      <p><strong>Board Roles</strong><br>
+                      Executive: CEO – Jophi Group | MD – Legacy Africa Multi Strategies<br>
+                      Non-Executive: Chair – Leap Science & Maths Schools; Corporate & Integrity Institution (Africa)
+                      </p>
+                      <p><strong>Profile</strong><br>
+                      Veteran financial strategist and fund manager with 30+ years in institutional investment, treasury, and financial innovation. Managed portfolios exceeding R40 billion across Africa and led teams at Deutsche Securities, Absa, M&G, BoE, and Peregrine.
+                      </p>
+                      <p><strong>Areas of Expertise</strong><br>
+                      Fund Management • Risk & Liquidity Modelling • Treasury Optimization • Governance & Compliance • Financial Modelling & Valuation • Derivatives & Index Solutions
+                      </p>
+                      <p><strong>Product Development</strong><br>
+                      Designed and launched products: Absa Top 40 Index Fund, BoE All Bond Index Fund, Peregrine Income Fund, CPI+3%, CPI+5%<br>
+                      Built financial models for leading firms including but not limited to Sasol, Anglo American, MTN, Tsogo Sun, Growthpoint, Absa, Sanlam, Harmony, Implats<br>
+                      Co-developed JSE Free Float Indices (2002–2006)<br>
+                      Regional consultant to central banks and institutions in Malawi, Ghana, Nigeria, and Uganda
+                      </p>
+                      <p><strong>Training & Advisory</strong><br>
+                      Delivered programs for over a dozen African financial institutions covering: Investment Masterclass • PPP Structuring • Treasury Solutions • Governance, Risk & Compliance
+                      </p>
+                      <p><strong>Selected Publication</strong><br>
+                      “A granularity Analysis of Exactly where the Pension Funds and CIS Money is invested”. SAFA Conference. 2022<br>
+                      “Liquidity Risk in the Context of the Ugandan Retirement Benefit Scheme”. Echo Risk. 2022<br>
+                      “A Trade Finance Solution in Agriculture: Implementing a farmer-centric price formation using binary option pricing approach”. 2019
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <div
       class="modal fade speaker-modal"
       id="speakerModal3"
