--- a/speakers.html
+++ b/speakers.html
@@ -1468,9 +1468,9 @@
               </div>
               <div class="speaker-info">
                 <h3>Dr. Islam Abdel Azim Azzam</h3>
-                <h4>
-                  Former Deputy Chairman, Financial Regulatory Authority & Professor of Finance, AUC
-                </h4>
+                  <h4>
+                    Executive Chairman, Egyptian Exchange (EGX)
+                  </h4>
 
                 <a
                   href="#"
@@ -1532,9 +1532,9 @@
               </div>
               <div class="speaker-info">
                 <h3>Rami El Dokany</h3>
-                <h4>
-                  Executive Chairman, Egyptian Exchange & Head of Arab Federation of Exchanges
-                </h4>
+                  <h4>
+                    Secretary General, Arab Federation of Capital Markets (AFCM)
+                  </h4>
 
                 <a
                   href="#"
@@ -3171,20 +3171,14 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Rami El Dokany</h3>
-                  <h4>Executive Chairman, Egyptian Exchange & Head of Arab Federation of Exchanges</h4>
+                  <h4>Secretary General, Arab Federation of Capital Markets (AFCM)</h4>
                   <div class="speaker-modal-bio">
-                    <p>
-                      Rami El Dokany is an investment professional with over 20 years of experience in private equity investments, investment banking and corporate business planning. Currently serving as Executive Chairman of the Egyptian Exchange, he leads one of the most significant capital markets in the Middle East and North Africa region, overseeing market development, regulation, and strategic initiatives.
-                    </p>
-                    <p>
-                      As Head of Arab Federation of Exchanges, Rami leads the industry association that includes 17 exchanges, 4 clearing houses and several industry players, with total market capitalization above USD 3.2 billion. This role involves coordinating regional capital market development and promoting best practices across Arab markets.
-                    </p>
-                    <p>
-                      He is actively involved in fintech innovation, investing in fintech startups in Egypt and contributing to the digital transformation of financial services. Rami founded Inclusion, a digital payments platform for businesses, and Pride Capital, an investment fund supporting promising startups and entrepreneurship innovation.
-                    </p>
-                    <p>
-                      Rami holds an MSc degree in Finance and M&As from the University of Wales, along with diplomas in Investments and Feasibility Studies from Cairo. He serves on various boards including BM Lease and the Insurance Holding Company, and works as a consultant to the World Bank on international development finance initiatives.
-                    </p>
+                                      <p>Rami El Dokany has more than twenty years of professional experience in the field of capital markets, private equity, investments, corporate finance, strategic planning and business development, accompanied by a strong educational background, from prominent local and international institutions. El Dokany was appointed as the Executive Chairman of The Egyptian Exchange (EGX) on the 25th of August 2022 till 24th of August 2023.</p>
+                                      <p>Prior to this, in 2019, Rami was appointed as Secretary General of the Arab Federation of Capital Markets, to formulate a common vision for the Arab Capital markets. Arab Federation of Capital Markets is the home for more than 24 Arab exchanges and clearing houses, as well as many prominent brokerage firms throughout the Arab World. During his post as the Secretary General of the AFCM, he managed to tailor a strategic restructuring program of the federation, allowing more inclusion among its members, abiding to governance practices and providing a sustainable path for the federation, taking its revenues from US$ 177k in 2019 to over US$ 1 million by the end of 2024.</p>
+                                      <p>Rami co-founded Pride Capital in 2017 to utilize his long experience in financial services and investments and passion to technology, and recently launched a fintech accelerator with Start-up boot camp in Cairo - the program is supported by Alex Bank, Visa, IFC, GIZ, Pharos Holding, Ayady & Export Development Bank of Egypt, and has invested in more than 11 startups in 1 year.</p>
+                                      <p>Rami was a Board member of BM Lease- subsidiary to Banque Misr, and an Investment committee member of the VC program of the Social Development Fund (in cooperation With the World Bank; where he approved several investments in debt and equity with multiple start-ups and accelerators like Cairo based FlatoLabs, as well a former Investment Committee member of the Insurance Holding Co.</p>
+                                      <p>His last post was VP at Al-Ahly Capital Holding - the investment arm of the National Bank of Egypt. During his post, he joined the Board of Directors of one of the leading oil refineries in Alexandria - Alexandria Mineral Oils Co. and handled the strategic restructuring of the company's investors relations and approach to the Capital Markets. Before that, Rami worked in HC investment banking, Etisalat Misr, LINKdotNET, and MIBank.</p>
+                                      <p>Rami Holds an M.Sc. From Wales University & B.Sc. in economics from Cairo University. As well as several executive certificates including Oxford University Fintech program, Cambridge University's strategy for COs program, London Business School Private Equity program, and Amsterdam Institute of Finance Valuation program.</p>
                   </div>
                 </div>
               </div>
