speakers and sponsors

--- a/speakers.html
+++ b/speakers.html
@@ -781,6 +781,10 @@
     <header class="header-area">
       <div class="container">
         <div class="row">
+            <!-- Speaker - Cecil Foster -->
+            
+            <!-- Speaker - Hon. Marlene Street Forrest -->
+            
           <div class="col-12">
             <nav class="navbar navbar-expand-lg">
               <!-- Logo -->
@@ -1388,7 +1392,31 @@
               </div>
             </div>
           </div>
-
+<div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Mrs Street Forrest.jpg" alt="Hon. Marlene Street Forrest" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Hon. Marlene Street Forrest, OJ, CD, PhD. (Hon.), JP</h3>
+                  <h4>Managing Director, Jamaica Stock Exchange</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMarleneStreetForrest"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
           <!-- Speaker 15: Thapelo Tsheole -->
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="regulator">
@@ -1547,6 +1575,31 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="business">
+                <div class="speaker-image">
+                  <img src="img/speakers/foster.jpg" alt="Cecil Foster" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Cecil Foster</h3>
+                  <h4>Founder & Managing Director, FosRich Company Limited</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalCecilFoster"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -1784,6 +1837,103 @@
       </div>
     </div>
     <!-- Speaker Modal 3 -->
+      <!-- Speaker Modal - Cecil Foster -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalCecilFoster"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/foster.jpg" alt="Cecil Foster" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Cecil Foster</h3>
+                    <h4>Founder & Managing Director, FosRich Company Limited</h4>
+                    <div class="speaker-modal-bio">
+                      <p>Cecil Foster is a Founder and the Managing Director of one of the largest lighting, electrical and solar energy distributors in Jamaica, the FosRich Company Limited, which was established in 1993. He has a Degree in Marketing from the University of Technology, with emphasis on business development and marketing.</p>
+                      <p>He is the Vice President of the Jamaica Manufacturers and Exporters Association Limited (JMEA) and is the President of the Adventist Laypersons’ Services and Industries (ASI JAMU). Mr. Foster is a member of the King’s House Foundation Board of Governors, and Chairman of the Grounds, Security and Maintenance Sub-Committee of the Board. Mr. Foster was recently elected as a member of the National Council on Technical and Vocation Education and Training.</p>
+                      <p>He is a long-standing member of the Incorporated Master Builders Association of Jamaica and the co-founder of the Good Samaritan Inn, which provides meals three times per week to approximately 600 persons from the inner-city communities of Kingston. The Good Samaritan Inn also serves as an overnight drop in facility for the homeless.</p>
+                      <p>Mr. Foster is a Senior Elder at Andrews Memorial Seventh-day Adventist Church.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Speaker Modal - Hon. Marlene Street Forrest -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalMarleneStreetForrest"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/Mrs Street Forrest.jpg" alt="Hon. Marlene Street Forrest" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Hon. Marlene Street Forrest, OJ, CD, PhD. (Hon.), JP</h3>
+                    <h4>Managing Director, Jamaica Stock Exchange</h4>
+                    <div class="speaker-modal-bio">
+                      <p>Dr. Marlene Street Forrest is the Managing Director of the Jamaica Stock Exchange (JSE) and Director of both its subsidiaries. Her mandate is to continue the process of developing the JSE Group and particularly the Exchange, in an atmosphere of transparency and fairness while utilizing appropriate technology in providing the greatest possible efficiencies to the market.</p>
+                      <p>Dr. Street Forrest has a wealth of experience having worked in senior management positions at varying private and public sector organizations here in Jamaica and overseas. Under her stewardship, the JSE became demutualized and the US Denominated Market and the Junior Market were launched. She also spearheaded the Registrar Division of the Jamaica Central Depository (JCSD) when she served as General Manager for this subsidiary of the JSE.</p>
+                      <p>Dr. Street Forrest attended the University of the West Indies, Mona, where she read for the Bachelors Degree in Management Studies and later gained her Masters in Business Administration at the Barry University in Florida.</p>
+                      <p>She is a Certified Business Consultant and a member of the International Association of Professional Business Consultants (IAPO). Dr. Street Forrest stays current with issues that impact the Market such as Cybersecurity, Data Protection and Enterprise Risk Management and is trained in these areas.</p>
+                      <p>In 2016, Dr. Street Forrest was conferred with the honour of the Order of Distinction in the Rank of Commander (CD) in recognition of her outstanding leadership in the growth of the Jamaica Stock Exchange. In that same year she also received the Afroglobal Excellence Award for Global Impact from Canada for exhibiting great leadership, vision, integrity and commitment to excellence.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Speaker Modal - Hortense Mudenge -->
       <div
         class="modal fade speaker-modal"
