--- a/sponsors.html
+++ b/sponsors.html
@@ -836,6 +836,20 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/kifc-logo.png"
+                    alt="AFI"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/nasdaq.png"
+                    alt="nasdaq"
+                    class="sponsor-logo"
+                  />
+                  </div>
               </div>
             </div>
           </div>
