--- a/speakers.html
+++ b/speakers.html
@@ -3196,7 +3196,7 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Dr. Islam Abdel Azim Azzam</h3>
-                  <h4>Former Deputy Chairman, Financial Regulatory Authority & Professor of Finance, AUC</h4>
+                <h4>Executive Chairman of the Egyptian Exchange (EGX)</h4>
                     <p>
                       Dr. Islam Abdel Azim Azzam is a distinguished financial regulator and academic with extensive experience in capital markets oversight, insurance regulation, and non-banking financial services. He served as Deputy Chairman of Egypt's Financial Regulatory Authority from January 2021 to August 2025, overseeing capital markets, insurance, and non-banking financial sectors.
                     </p>
