--- a/speakers.html
+++ b/speakers.html
@@ -781,6 +781,8 @@
     <header class="header-area">
       <div class="container">
         <div class="row">
+            <!-- Speaker - Jean Bosco Iyacu -->
+            
             <!-- Speaker - Cecil Foster -->
             
             <!-- Speaker - Hon. Marlene Street Forrest -->
@@ -1600,6 +1602,31 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Jean Bosco Iyacu.jpg" alt="Jean Bosco Iyacu" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Jean Bosco Iyacu</h3>
+                  <h4>Chief Executive Officer, Access to Finance Rwanda (AFR)</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalJeanBoscoIyacu"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -1837,6 +1864,53 @@
       </div>
     </div>
     <!-- Speaker Modal 3 -->
+      <!-- Speaker Modal - Jean Bosco Iyacu -->
+      <div
+        class="modal fade speaker-modal"
+        id="speakerModalJeanBoscoIyacu"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Speaker Profile</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="speaker-modal-image">
+                    <img src="img/speakers/Jean Bosco Iyacu.jpg" alt="Jean Bosco Iyacu" />
+                  </div>
+                  <div class="speaker-modal-social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="speaker-modal-info">
+                    <h3>Jean Bosco Iyacu</h3>
+                    <h4>Chief Executive Officer, Access to Finance Rwanda (AFR)</h4>
+                    <div class="speaker-modal-bio">
+                      <p>Mr. Jean Bosco Iyacu is the Chief Executive Officer since February 2021. Prior to becoming AFR’s CEO, Iyacu served the organization as the Director of Programs for 7 years and has been instrumental in the design and implementation of a diverse range of financial inclusion and financial sector development programs in Rwanda.</p>
+                      <p>Before joining AFR, he was the Chief Executive Officer of the Rwanda Business Development Center (RBDC), an entrepreneurship and business incubation facility. He also served in various leadership capacities in some of Africa’s leading Financial Institutions such as KCB Bank Rwanda Ltd where he was the Regional Business Manager and Head of Retail and SME Banking. He holds a Master’s Degree in Economics from the University of Witwatersrand, South Africa.</p>
+                      <p>Iyacu is a Certified Expert in Microfinance, SME Financing, and Inclusive Insurance from the Frankfurt School of Finance and Management and a Certified Expert in Digital Money from the Digital Frontiers Institute. He has also completed the Harvard Kennedy School’s Executive Course on Rethinking Financial Inclusion.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Speaker Modal - Cecil Foster -->
       <div
         class="modal fade speaker-modal"
