--- a/judges.html
+++ b/judges.html
@@ -1358,8 +1358,7 @@
               <div class="judge-info">
                 <h3>Rami El Dokany</h3>
                 <h4>
-                  Executive Chairman, Egyptian Exchange & Head of Arab
-                  Federation of Exchanges
+                  Secretary General, Arab Federation of Capital Markets (AFCM) 
                 </h4>
                 <p>
                   Over 20 years of experience in private equity, investment
